project display page is responsive

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1047,6 +1047,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-\[2vh\] {
+  gap: 2vh;
+}
+
 .self-start {
   align-self: flex-start;
 }
@@ -1469,6 +1473,21 @@ video {
   padding-right: 100px;
 }
 
+.px-\[1vw\] {
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
+.px-\[2vw\] {
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.py-\[5vh\] {
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1569,6 +1588,16 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-bold {
@@ -1864,6 +1893,10 @@ body {
     width: 33.333333%;
   }
 
+  .lg\:w-4\/5 {
+    width: 80%;
+  }
+
   .lg\:min-w-\[300px\] {
     min-width: 300px;
   }
@@ -1900,6 +1933,10 @@ body {
     gap: 0px;
   }
 
+  .lg\:gap-\[10vh\] {
+    gap: 10vh;
+  }
+
   .lg\:overflow-hidden {
     overflow: hidden;
   }
@@ -1926,6 +1963,11 @@ body {
   .lg\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+
+  .lg\:px-\[5vw\] {
+    padding-left: 5vw;
+    padding-right: 5vw;
   }
 
   .lg\:pl-0 {
